Fix horizontal scroll

--- a/src/components/pdfDocument/pdfDocument.scss
+++ b/src/components/pdfDocument/pdfDocument.scss
@@ -1,4 +1,5 @@
 .pdf-document {
   display: flex;
   flex-direction: column;
+  margin: auto;
 }
