--- a/src/components/pdfPage/pdfPage.scss
+++ b/src/components/pdfPage/pdfPage.scss
@@ -4,6 +4,7 @@
   position: relative;
   background: #fff;
   margin-top: 8px;
+  overflow: hidden;
 
   -moz-box-shadow: 0 0 4px 2px $component-shadow-color;
   -webkit-box-shadow: 0 0 4px 2px $component-shadow-color;
