--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
   overflow: auto;
 }
